[package]
name = "linux-stats"
version = "0.1.0"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "typesafe procfs info"
keywords = ["linux", "stat", "meminfo", "cpus"]
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/nathansizemore/linux-stats"

[dependencies]
rustc-serialize = "^0.3"
enum_primitive = "0.1.1"
num = "0.1.36"
