[package]
name = "linux-stats"
version = "0.3.2"
authors = ["Nathan Sizemore <nathanrsizemore@gmail.com>"]
description = "typesafe procfs info"
keywords = ["linux", "stat", "meminfo", "cpus"]
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/nathansizemore/linux-stats"
edition = "2021"

[dependencies]
enum_primitive = "0.1.1"
num = "0.4.0"
hex = "0.4.3"
